--- a/results.html
+++ b/results.html
@@ -50,24 +50,15 @@
        Contact
       </a>
      </nav>
-     <button aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle menu" class="md:hidden text-gray-700 hover:text-red-600 focus:outline-none focus:ring-2 focus:ring-red-600 rounded" id="mobile-menu-button">
-      <i class="fas fa-bars fa-lg">
-      </i>
+     <button aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle menu" class="md:hidden text-white hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-white rounded" id="mobile-menu-button">
+      <i class="fas fa-bars fa-lg"></i>
      </button>
     </div>
-    <nav aria-label="Mobile menu" class="hidden md:hidden bg-white border-t border-gray-200" id="mobile-menu">
-     <a class="block px-6 py-3 border-b border-gray-200 hover:bg-red-50 hover:text-red-600 font-semibold transition" href="index.html">
-      Home
-     </a>
-     <a class="block px-6 py-3 border-b border-gray-200 hover:bg-red-50 hover:text-red-600 font-semibold transition" href="cd.html">
-      Courses
-     </a>
-     <a class="block px-6 py-3 border-b border-gray-200 hover:bg-red-50 hover:text-red-600 font-semibold transition" href="#why-choose-title">
-      Why Choose Us
-     </a>
-     <a class="block px-6 py-3 hover:bg-red-50 hover:text-red-600 font-semibold transition" href="#contact">
-      Contact
-     </a>
+    <nav aria-label="Mobile menu" class="hidden md:hidden bg-[#005f73] border-t border-gray-200" id="mobile-menu">
+     <a href="index.html" class="block px-6 py-3 border-b border-gray-200 hover:bg-[#0a9396] hover:text-white font-semibold transition">Home</a>
+     <a href="cd.html" class="block px-6 py-3 border-b border-gray-200 hover:bg-[#0a9396] hover:text-white font-semibold transition">Courses</a>
+     <a href="#why-choose-title" class="block px-6 py-3 border-b border-gray-200 hover:bg-[#0a9396] hover:text-white font-semibold transition">Why Choose Us</a>
+     <a href="#contact" class="block px-6 py-3 hover:bg-[#0a9396] hover:text-white font-semibold transition">Contact</a>
     </nav>
    </header>
 
@@ -482,7 +473,7 @@
       <h3 class="text-xl font-bold border-b border-white pb-2">Quick Links</h3>
       <nav class="flex flex-col space-y-2 text-white/90">
        <a
-         href=""
+         href="index.html"
          class="hover:text-white/80 transition"
          >Home</a
        >
