--- a/cd.html
+++ b/cd.html
@@ -89,6 +89,8 @@
       outline: transparent solid 3px;
       border-radius: 0.75rem;
       transition: outline-color 0.3s ease;
+      overflow: hidden;
+      word-break: break-word;
     }
     .feature-flip:focus-visible {
       outline-color: #b91c1c;
@@ -116,6 +118,9 @@
       background: white;
       border: 2.5px solid #eab0b0;
       color: #b91c1c;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
     }
     .feature-flip:hover .feature-flip-inner,
     .feature-flip:focus-within .feature-flip-inner {
@@ -149,6 +154,9 @@
       transition: color 0.3s ease;
       word-break: break-word;
       white-space: normal;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
     }
     /* Front face */
     .feature-front {
@@ -156,6 +164,9 @@
       border: none;
       color: inherit;
       filter: none;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
     }
     .feature-box.no .feature-front {
       color: #9ca3af;
@@ -198,6 +209,9 @@
       display: flex;
       align-items: center;
       justify-content: center;
+      overflow-wrap: break-word;
+      word-wrap: break-word;
+      hyphens: auto;
     }
     /* Enrol button container */
     .enrol-container {
@@ -281,11 +295,23 @@
         min-width: 180px;
         max-width: 220px;
         height: 85px;
+        word-break: break-word;
+        overflow-wrap: break-word;
+        hyphens: auto;
+      }
+      .feature-flip-inner {
+        padding: 0 0.75rem;
       }
       .feature-front,
       .feature-back {
         font-size: 1rem;
-        padding: 0.75rem 1rem;
+        padding: 0.5rem 0.75rem;
+        word-break: break-word;
+        overflow-wrap: break-word;
+        hyphens: auto;
+      }
+      .feature-front i {
+        font-size: 1.4rem;
       }
       .enrol-btn {
         font-size: 1.15rem;
