--- a/header.html
+++ b/header.html
@@ -62,6 +62,14 @@
   </script>
 
   <style>
+    @media (max-width: 767px) {
+      #mobile-menu {
+        display: none !important;
+      }
+      #mobile-menu-button {
+        display: none !important;
+      }
+    }
   </style>
 
 </header>
