--- a/course_details.html
+++ b/course_details.html
@@ -14,8 +14,8 @@
 </head>
 <body class="bg-gray-50 p-4 sm:p-6 lg:p-8">
   <div class="max-w-5xl mx-auto">
-    <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-900 mb-6 text-center">CAT 2025 Course Comparison Table</h1>
-    <div aria-label="CAT 2025 Course Comparison Table Wrapper" class="max-w-full mx-auto" style="user-select:none;">
+    <h1 class="text-2xl sm:text-3xl font-extrabold text-gray-900 mb-6 text-center hidden md:block">CAT 2025 Course Comparison Table</h1>
+    <div aria-label="CAT 2025 Course Comparison Table Wrapper" class="max-w-full mx-auto hidden md:block" style="user-select:none;">
       <div role="table" aria-label="CAT 2025 Course Comparison" class="w-full bg-white rounded-2xl shadow-lg border border-gray-300 overflow-x-auto">
         <table class="w-full border-collapse table-fixed text-gray-900 text-sm sm:text-base" style="min-width:600px;">
           <thead>
