--- a/results.html
+++ b/results.html
@@ -50,15 +50,15 @@
        Contact
       </a>
      </nav>
-     <button aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle menu" class="md:hidden text-white hover:text-gray-300 focus:outline-none focus:ring-2 focus:ring-white rounded" id="mobile-menu-button">
+     <button aria-controls="mobile-menu" aria-expanded="false" aria-label="Toggle menu" class="md:hidden text-gray-700 hover:text-red-600 focus:outline-none focus:ring-2 focus:ring-red-600 rounded" id="mobile-menu-button">
       <i class="fas fa-bars fa-lg"></i>
      </button>
     </div>
-    <nav aria-label="Mobile menu" class="hidden md:hidden bg-[#005f73] border-t border-gray-200" id="mobile-menu">
-     <a href="index.html" class="block px-6 py-3 border-b border-gray-200 hover:bg-[#0a9396] hover:text-white font-semibold transition">Home</a>
-     <a href="cd.html" class="block px-6 py-3 border-b border-gray-200 hover:bg-[#0a9396] hover:text-white font-semibold transition">Courses</a>
-     <a href="#why-choose-title" class="block px-6 py-3 border-b border-gray-200 hover:bg-[#0a9396] hover:text-white font-semibold transition">Why Choose Us</a>
-     <a href="#contact" class="block px-6 py-3 hover:bg-[#0a9396] hover:text-white font-semibold transition">Contact</a>
+    <nav aria-label="Mobile menu" class="hidden md:hidden bg-white border-t border-gray-200" id="mobile-menu">
+     <a class="block px-6 py-3 border-b border-gray-200 hover:bg-red-50 hover:text-red-600 font-semibold transition" href="index.html">Home</a>
+     <a class="block px-6 py-3 border-b border-gray-200 hover:bg-red-50 hover:text-red-600 font-semibold transition" href="cd.html">Courses</a>
+     <a class="block px-6 py-3 border-b border-gray-200 hover:bg-red-50 hover:text-red-600 font-semibold transition" href="about.html#why-choose-title">Why Choose Us</a>
+     <a class="block px-6 py-3 hover:bg-red-50 hover:text-red-600 font-semibold transition" href="https://api.whatsapp.com/send?phone=919827118488&text=I%20want%20to%20enquire%20about%20AB%20Classes">Contact</a>
     </nav>
    </header>
 
@@ -527,6 +527,23 @@
       tab2024.setAttribute('aria-selected', 'false');
       panel2023.classList.remove('hidden');
       panel2024.classList.add('hidden');
+    });
+
+    // Mobile menu toggle
+    const mobileMenuButton = document.getElementById("mobile-menu-button");
+    const mobileMenu = document.getElementById("mobile-menu");
+
+    mobileMenuButton.addEventListener("click", () => {
+      const expanded =
+        mobileMenuButton.getAttribute("aria-expanded") === "true" || false;
+      mobileMenuButton.setAttribute("aria-expanded", !expanded);
+      if (mobileMenu.classList.contains("hidden")) {
+        mobileMenu.classList.remove("hidden");
+        mobileMenuButton.innerHTML = '<i class="fas fa-times fa-lg"></i>'; // Change to close icon
+      } else {
+        mobileMenu.classList.add("hidden");
+        mobileMenuButton.innerHTML = '<i class="fas fa-bars fa-lg"></i>'; // Change back to bars icon
+      }
     });
   </script>
  </body>
