--- a/cd.html
+++ b/cd.html
@@ -13,6 +13,9 @@
     rel="stylesheet"
   />
   <style>
+    html, body {
+      overflow-x: hidden; /* Prevent horizontal scrolling */
+    }
     body {
       font-family: 'Inter', sans-serif;
       background: #fff5f5;
