--- a/testimonial.html
+++ b/testimonial.html
@@ -205,6 +205,7 @@
       .carousel-container {
         height: 520px;
         max-width: 320px;
+        display: none; /* Hide the carousel on mobile */
       }
       .carousel-item {
         width: 280px;
