--- a/video_testimonial.html
+++ b/video_testimonial.html
@@ -85,12 +85,22 @@
   </section>
 
   <script>
-    document.querySelectorAll('video').forEach(video => {
+    const videos = document.querySelectorAll('video');
+
+    videos.forEach(video => {
       video.addEventListener('pause', () => {
         if (!video.ended) {
           video.currentTime = 0;
           setTimeout(() => video.load(), 10);
         }
+      });
+
+      video.addEventListener('play', () => {
+        videos.forEach(otherVideo => {
+          if (otherVideo !== video) {
+            otherVideo.pause();
+          }
+        });
       });
     });
   </script>
